# SZA-plus-plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Test1.cpp  Test2.cpp  Test3.cpp  main.cpp
api/: conf.h  http.h  module.h  net.h
api/pp/: conf.cpp  conf.hpp  http.hpp  module.hpp  net.hpp  visitor.hpp
docs/: .gitignore  Doxyfile  uml.asta
docs/doxygen/: annotated.html  classes.html  classzia_1_1api_1_1_conf_value.html  classzia_1_1api_1_1_conf_value__coll__graph.md5  classzia_1_1api_1_1_conf_value__inherit__graph.md5  classzia_1_1api_1_1_module-members.html  classzia_1_1api_1_1_module.html  classzia_1_1api_1_1_module__coll__graph.map  classzia_1_1api_1_1_module__coll__graph.md5  classzia_1_1api_1_1_net-members.html  classzia_1_1api_1_1_net.html  classzia_1_1api_1_1_net__coll__graph.map  classzia_1_1api_1_1_net__coll__graph.md5  conf_8h.html  conf_8h__dep__incl.map  conf_8h__dep__incl.md5  conf_8h__incl.md5  conf_8h_source.html  dir_0188a3e6da905bc60aceb35bf790b8c9.html  doxymain_8txt.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  hierarchy.html  http_8h.html  http_8h__dep__incl.map  http_8h__dep__incl.md5  http_8h__incl.map  http_8h__incl.md5  http_8h_source.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  (+64 more)
docs/doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+47 more)
